utf-8 encoding added

--- a/differentialEvolution/index.html
+++ b/differentialEvolution/index.html
@@ -5,6 +5,7 @@
 	<script type="text/javascript" src="js/differentialEvolution.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<meta charset="utf-8">
 </head>
 <body>
 	<img src="imgs/logo.png" style="width: 100px;">
