adding all files to repository

--- a/differentialEvolution/index.html
+++ b/differentialEvolution/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>DE</title>
+	<script type="text/javascript" src="js/testFunctions.js"></script>
 	<script type="text/javascript" src="js/differentialEvolution.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -52,7 +53,15 @@
 					</select>
 				</td>
 			</tr>
-			<tr><td>Fitness function:</td><td></td></tr>
+			<tr><td>Fitness function:</td>
+				<td>
+					<select>
+						<option id="ff-ackley" value="ackley">Ackley</option>
+						<option id="ff-rosenbaum" value="rosenbaum">Rosembaum</option>
+					</select>
+					<a href="#">?</a>
+				</td>
+			</tr>
 			<tr>
 				<td colspan="2">
 					<textarea rows="6" cols="50">x1^2+x2^2;</textarea>
@@ -63,6 +72,18 @@
 			</tr>
 		</table>
 	</div>
+
+	<button id="myBtn">Open Modal</button>
+
+	<div id="myModal" class="modal">
+
+	  <div class="modal-content">
+	    <span class="close">&times;</span>
+	    <p>Some text in the Modal..</p>
+	  </div>
+
+	</div> 
+
 	<script type="text/javascript">
 		var flavor = new Vue({
 		  el: '#flavor',
@@ -74,6 +95,32 @@
 		  }
 		})
 		
+
+		// Get the modal
+		var modal = document.getElementById('myModal');
+
+		// Get the button that opens the modal
+		var btn = document.getElementById("myBtn");
+
+		// Get the <span> element that closes the modal
+		var span = document.getElementsByClassName("close")[0];
+
+		// When the user clicks on the button, open the modal
+		btn.onclick = function() {
+		    modal.style.display = "block";
+		}
+
+		// When the user clicks on <span> (x), close the modal
+		span.onclick = function() {
+		    modal.style.display = "none";
+		}
+
+		// When the user clicks anywhere outside of the modal, close it
+		window.onclick = function(event) {
+		    if (event.target == modal) {
+		        modal.style.display = "none";
+		    }
+		} 
 	</script>
 </body>
 </html>
