--- a/chessBoardTrainer/index.html
+++ b/chessBoardTrainer/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/menu.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="manifest" href="/manifest.json">
 </head>
 <body>
 	<span id="conf" onclick="openNav()">&#9965;</span>
